--- a/docs/tex/1-wprowadzenie.tex
+++ b/docs/tex/1-wprowadzenie.tex
@@ -32,7 +32,7 @@ Praca składa się z następujących rozdziałów:
     \item \textbf{Rozdział 1 – Wprowadzenie}: przedstawienie tematu, celów, motywacji oraz układu pracy,
     \item \textbf{Rozdział 2 – Przegląd literatury}: analiza aktualnych badań nad wykorzystaniem LLM w generowaniu konfiguracji IaC (Docker, Kubernetes) oraz identyfikacja luk w istniejącej wiedzy,
     \item \textbf{Rozdział 3 – Przegląd technologii i narzędzi}: opis wybranych modeli językowych, technologii infrastrukturalnych oraz architektury systemu agentowego,
-    \item \textbf{Rozdział 4 – Projekt eksperymentów}: przedstawienie pięciu hipotez badawczych (H1–H5), metodyki ich weryfikacji, zestawów danych testowych, architektury systemu testowego oraz kryteriów oceny dla każdej hipotezy,
+    \item \textbf{Rozdział 4 – Projekt eksperymentów}: przedstawienie pięciu hipotez badawczych, metodyki ich weryfikacji, zestawów danych testowych, architektury systemu testowego oraz kryteriów oceny dla każdej hipotezy,
     \item \textbf{Rozdział 5 – Wyniki eksperymentów}: szczegółowa prezentacja wyników dla każdej z pięciu hipotez, analiza danych, wielowarstwowa walidacja jakości (automatyczna, LLM-as-a-Judge, ekspercka), przekrojowe porównanie modeli oraz synteza wyników z wnioskami i implikacjami praktycznymi,
     \item \textbf{[TODO: Rozdział 6 – Praktyczne zastosowanie – system PaaS]}: demonstracja praktycznego wykorzystania wypracowanych rozwiązań w postaci prototypowego systemu typu Platform as a Service automatyzującego wdrażanie aplikacji kontenerowych,
     \item \textbf{[TODO: Rozdział 7 – Wnioski i dalsze kierunki rozwoju]}: podsumowanie wyników badań, weryfikacja hipotez, ocena przydatności agentów LLM w kontekście DevOps oraz wskazanie możliwych obszarów dalszych badań.
