--- a/docs/tex/4-projekt-eksperymentow.tex
+++ b/docs/tex/4-projekt-eksperymentow.tex
@@ -13,7 +13,7 @@ W ramach badania sformułowano pięć hipotez weryfikowanych eksperymentalnie:
 
 \begin{itemize}
     \item \textbf{H1: Autonomiczna generacja funkcjonalnych konfiguracji} \\
-    Duże modele językowe, działające jako agenty z dostępem do narzędzi analizy repozytorium, są w stanie autonomicznie wygenerować funkcjonalne konfiguracje Docker i Kubernetes, które umożliwiają poprawne uruchomienie aplikacji bez dodatkowej ingerencji człowieka, w tym osiągnięcie gotowości usługowej widocznej na poziomie interfejsu (np. webowe API odpowiada na zapytania HTTP/REST po wdrożeniu na klastrze testowym).
+    Duże modele językowe, działające jako agenty z dostępem do narzędzi analizy repozytorium, są w stanie autonomicznie wygenerować funkcjonalne konfiguracje Docker i Kubernetes, które umożliwiają poprawne uruchomienie aplikacji bez dodatkowej ingerencji człowieka, w tym osiągnięcie gotowości usługowej widocznej na poziomie interfejsu (np. webowe API odpowiada na zapytania HTTP/REST po wdrożeniu na klastrze testowym). Dodatkowo, weryfikujemy wpływ szczegółowości instrukcji systemowych (prompt engineering) poprzez porównanie wariantów prompta różniących się poziomem szczegółowości wskazówek dotyczących najlepszych praktyk DevOps, co pozwoli ocenić wrażliwość podejścia agentowego na jakość prompt engineering.
 
     \item \textbf{H2: Ograniczenia złożonościowe} \\
     Istnieje próg złożoności aplikacji, powyżej którego jakość autonomicznie generowanych konfiguracji znacząco spada. Progi te można uchwycić, obserwując wyniki na kontrolowanych repozytoriach poc1–poc4 o rosnącej liczbie komponentów i zależności (od prostego monolitu po prosty układ mikroserwisowy); oczekuje się, że metryki sukcesu (np. odsetek poprawnych wdrożeń) maleją wraz z przechodzeniem od poc1 do poc4.
@@ -47,7 +47,7 @@ Agent został zaimplementowany przy użyciu biblioteki LangGraph i pełni rolę 
 Agent dysponuje zestawem jedenastu funkcji umożliwiających interakcję z repozytorium:
 
 \begin{itemize}
-    \item \texttt{clone\_repo(repo\_url)} – klonuje repozytorium Git i automatycznie usuwa pliki mogące sugerować gotowe rozwiązanie: metadane VCS (\texttt{.git}, \texttt{.github}, \texttt{.gitignore}), dokumentację (\texttt{README.md}, \texttt{LICENSE}), istniejące konfiguracje (\texttt{Dockerfile}, \texttt{docker-compose.yml}), pliki CI/CD (\texttt{.gitlab-ci.yml}, \texttt{.travis.yml}) oraz artefakty deweloperskie (\texttt{\_\_pycache\_\_}, \texttt{.pytest\_cache}, \texttt{.idea}, \texttt{.vscode}). Usunięcie istniejących plików \texttt{Dockerfile} i \texttt{docker-compose.yml} jest celową decyzją — zapewnia, że agent generuje konfiguracje wyłącznie na podstawie analizy kodu źródłowego,
+    \item \texttt{clone\_repo(repo\_url)} – klonuje repozytorium Git i automatycznie usuwa pliki mogące sugerować gotowe rozwiązanie: metadane VCS, dokumentację, istniejące konfiguracje, pliki CI/CD oraz artefakty deweloperskie. Usunięcie istniejących plików \texttt{Dockerfile} i \texttt{docker-compose.yml} jest celową decyzją — zapewnia, że agent generuje konfiguracje wyłącznie na podstawie analizy kodu źródłowego,
 
     \item \texttt{prepare\_repo\_tree()} – generuje tekstowy widok struktury katalogów (podobnie do \texttt{tree}),
 
@@ -136,7 +136,7 @@ Wszystkie testowane modele otrzymują identyczny prompt oraz to samo repozytoriu
 
 \subsubsection{Hipoteza}
 
-Duże modele językowe, działające jako agenty z dostępem do narzędzi analizy repozytorium, są w stanie autonomicznie wygenerować funkcjonalne konfiguracje Docker i Kubernetes, które umożliwiają poprawne uruchomienie aplikacji bez dodatkowej ingerencji człowieka.
+Duże modele językowe, działające jako agenty z dostępem do narzędzi analizy repozytorium, są w stanie autonomicznie wygenerować funkcjonalne konfiguracje Docker i Kubernetes, które umożliwiają poprawne uruchomienie aplikacji bez dodatkowej ingerencji człowieka. Dodatkowo, weryfikujemy wpływ szczegółowości instrukcji systemowych (prompt engineering) na skuteczność generacji.
 
 \subsubsection{Strategia testowania}
 
@@ -151,7 +151,23 @@ Dataset obejmuje 30–50 projektów zróżnicowanych pod względem:
 
 Ten szeroki dataset zwiększa reprezentatywność eksperymentu oraz umożliwia uogólnienie wyników na szerszą klasę projektów spotykanych w praktyce, weryfikując podstawową przydatność podejścia agentowego do automatyzacji generowania konfiguracji IaC.
 
-Ze względu na koszt wywołań API oraz objętość danych, dla H1 przeprowadzane są 1–2 powtórzenia dla każdego repozytorium z 2–3 najlepszymi modelami komercyjnymi (np. GPT-5, Claude Sonnet 4.5).
+\bigskip
+\noindent
+\textbf{Warianty promptów:}
+
+Aby ocenić wpływ jakości instrukcji systemowych na skuteczność generacji, testy H1 obejmują dwa warianty prompta:
+
+\begin{itemize}
+    \item \textbf{basic.prompt} — zwięzła wersja zawierająca podstawowe instrukcje dotyczące celu zadania i ogólnych wytycznych tworzenia konfiguracji Docker i Kubernetes, bez szczegółowych wskazówek dotyczących najlepszych praktyk DevOps,
+
+    \item \textbf{default.prompt} — rozbudowana wersja (załącznik~\ref{att:prompt}) zawierająca szczegółowe wskazówki dotyczące bezpieczeństwa (non-root user, read-only filesystem), optymalizacji (multi-stage builds, layer caching), zarządzania zależnościami (npm ci vs npm install, weryfikacja package-lock.json), typowych pułapek (apt-get 404, Alpine compatibility) oraz najlepszych praktyk Kubernetes (health probes, resource limits, StatefulSets vs Deployments).
+\end{itemize}
+
+Porównanie wyników między wariantami pozwoli określić, w jakim stopniu szczegółowość i jakość prompt engineering wpływa na success rate oraz jakość wygenerowanych konfiguracji, co ma istotne implikacje praktyczne dla wdrożeń produkcyjnych systemów opartych na agentach LLM.
+
+\bigskip
+\noindent
+Ze względu na koszt wywołań API oraz objętość danych, dla H1 przeprowadzane są 1–2 powtórzenia dla każdego repozytorium z 2–3 najlepszymi modelami komercyjnymi (np. GPT-5, Claude Sonnet 4.5) oraz oboma wariantami promptów.
 
 \subsubsection{Metryki}
 
@@ -160,7 +176,8 @@ Ze względu na koszt wywołań API oraz objętość danych, dla H1 przeprowadzan
     \item \texttt{dockerfile\_syntax\_valid} — czy Dockerfile jest poprawny składniowo,
     \item \texttt{k8s\_syntax\_valid} — czy manifesty Kubernetes są poprawne składniowo,
     \item \texttt{build\_success} — czy obrazy Docker zbudowały się pomyślnie,
-    \item \texttt{runtime\_success} — czy aplikacja uruchomiła się poprawnie w klastrze i odpowiada na żądania HTTP.
+    \item \texttt{runtime\_success} — czy aplikacja uruchomiła się poprawnie w klastrze i odpowiada na żądania HTTP,
+    \item \texttt{prompt\_id} — identyfikator wariantu prompta (basic / default).
 \end{itemize}
 
 \textbf{Wskaźnik sukcesu:}
@@ -168,11 +185,24 @@ Ze względu na koszt wywołań API oraz objętość danych, dla H1 przeprowadzan
 \text{Success rate} = \frac{\text{build\_success} \land \text{runtime\_success}}{\text{total\_runs}} \times 100\%
 \]
 
+\textbf{Porównanie wariantów promptów:}
+\[
+\Delta_{\text{prompt}} = \text{Success rate}_{\text{default}} - \text{Success rate}_{\text{basic}}
+\]
+
 \subsubsection{Kryteria weryfikacji}
 
 \begin{itemize}
-    \item \textbf{Pozytywna weryfikacja hipotezy}: Success rate > 60–70\% na różnorodnym zbiorze projektów — wskazuje, że agenty LLM potrafią autonomicznie generować funkcjonalne konfiguracje w większości przypadków.
-    \item \textbf{Negatywna weryfikacja hipotezy}: Success rate < 50\% — wskazuje na fundamentalne ograniczenia podejścia agentowego w praktycznym zastosowaniu.
+    \item \textbf{Pozytywna weryfikacja hipotezy}:
+    \begin{itemize}
+        \item Success rate > 60–70\% na różnorodnym zbiorze projektów — wskazuje, że agenty LLM potrafią autonomicznie generować funkcjonalne konfiguracje w większości przypadków,
+        \item $\Delta_{\text{prompt}}$ > 15\% — szczegółowy prompt znacząco poprawia skuteczność generacji, co potwierdza istotność prompt engineering w kontekście agentów LLM.
+    \end{itemize}
+    \item \textbf{Negatywna weryfikacja hipotezy}:
+    \begin{itemize}
+        \item Success rate < 50\% — wskazuje na fundamentalne ograniczenia podejścia agentowego w praktycznym zastosowaniu,
+        \item $|\Delta_{\text{prompt}}|$ < 5\% — wariant prompta nie ma istotnego wpływu na wyniki, co sugeruje, że jakość prompt engineering jest drugorzędna wobec innych czynników (np. możliwości modelu, złożoność repozytorium).
+    \end{itemize}
 \end{itemize}
 
 \subsection{Weryfikacja H2: Ograniczenia złożonościowe}
