--- a/docs/tex/2-przeglad-literatury.tex
+++ b/docs/tex/2-przeglad-literatury.tex
@@ -155,6 +155,6 @@ Z drugiej strony, pojawia się szereg wyzwań i ryzyk, które należy rozważyć
 
 Podsumowując, literatura wskazuje, że duże modele językowe posiadają już zdolności umożliwiające znaczne usprawnienie procesu tworzenia i utrzymania infrastruktury jako kodu. Udane demonstracje – takie jak automatyczne wygenerowanie działającego Dockerfile dla setek projektów \cite{hu_llm-based_2025}, czy wygenerowanie manifestu Kubernetes pozwalającego na wdrożenie aplikacji bez ręcznej konfiguracji \cite{kratzke_dont_2024} – dowodzą, że automatyzacja DevOps z pomocą AI jest możliwa i może przynieść realne oszczędności czasu oraz redukcję błędów.
 
-Jednocześnie jednak żadne z rozwiązań nie jest pozbawione wad. Wyzwania związane z halucynacjami modeli \cite{low_repairing_2024}, koniecznością walidacji wyników \cite{ueno_migrating_2024, kon_iac-eval_nodate} i zapewnieniem bezpieczeństwa \cite{malul_genkubesec_2024, fu_security_2025} wskazują, że rola człowieka (eksperta DevOps) wciąż pozostaje ważna jako nadzorcy i korektora działania AI. Dlatego bieżące badania kierują się ku metodom łączenia silnych stron LLM z mechanizmami kontrolnymi – np. stosowanie podejścia human-in-the-loop \cite{low_repairing_2024}, rozwijanie benchmarków oceny jakości (aby móc mierzyć postępy i porównywać modele) \cite{ueno_migrating_2024, kon_iac-eval_nodate}, eksplorowanie technik prompt engineering \cite{kratzke_dont_2024, pujar_invited_2023}, a także opracowanie metod ochrony przed atakami prompt injection \cite{liu_prompt_2024}, które zmniejszą skłonność modeli do popełniania typowych błędów lub podatności.
+Jednocześnie jednak żadne z rozwiązań nie jest pozbawione wad. Wyzwania związane z halucynacjami modeli \cite{low_repairing_2024}, koniecznością walidacji wyników \cite{ueno_migrating_2024, kon_iac-eval_nodate} i zapewnieniem bezpieczeństwa \cite{malul_genkubesec_2024, fu_security_2025} wskazują, że rola człowieka (eksperta DevOps) wciąż pozostaje ważna jako nadzorcy i korektora działania AI. Dlatego bieżące badania kierują się ku metodom łączenia silnych stron LLM z mechanizmami kontrolnymi – np. stosowanie podejścia human-in-the-loop \cite{low_repairing_2024}, rozwijanie benchmarków oceny jakości generowanych artefaktów (aby mierzyć postępy i trafność podejść) \cite{ueno_migrating_2024, kon_iac-eval_nodate}, eksplorowanie technik prompt engineering \cite{kratzke_dont_2024, pujar_invited_2023}, a także opracowanie metod ochrony przed atakami prompt injection \cite{liu_prompt_2024}, które zmniejszą skłonność modeli do popełniania typowych błędów lub podatności.
 
 Niniejsza praca magisterska rozwija ten nurt, skupiając się na empirycznym zbadaniu, czy agenci oparci na LLM potrafią – przy minimalnej ingerencji człowieka – przygotować poprawne, bezpieczne i zgodne z praktyką konfiguracje Docker oraz Kubernetes wyłącznie na podstawie repozytorium kodu źródłowego. Różne modele językowe traktowane są jako narzędzia umożliwiające uchwycenie ograniczeń takiego podejścia, a nie jako obiekty rankingu. Szczególny nacisk położono na zagadnienia bezpieczeństwa (m.in. prompt injection, złośliwe repozytoria), zgodność z dobrymi praktykami i faktyczną funkcjonalność wdrożeń. Rezultatem ma być również prototypowy komponent typu PaaS pokazujący, jak wypracowane mechanizmy mogą zostać włączone do praktycznego procesu wdrożeniowego, choć element ten pełni rolę demonstracyjną wobec głównej części badawczej.
