--- a/docs/tex/4-projekt-eksperymentow.tex
+++ b/docs/tex/4-projekt-eksperymentow.tex
@@ -13,7 +13,7 @@ W ramach badania sformułowano pięć hipotez weryfikowanych eksperymentalnie:
 
 \begin{itemize}
     \item \textbf{H1: Autonomiczna generacja funkcjonalnych konfiguracji} \\
-    Duże modele językowe, działające jako agenty z dostępem do narzędzi analizy repozytorium, są w stanie autonomicznie wygenerować funkcjonalne konfiguracje Docker i Kubernetes, które umożliwiają poprawne uruchomienie aplikacji bez dodatkowej ingerencji człowieka, w tym osiągnięcie gotowości usługowej widocznej na poziomie interfejsu (np. webowe API odpowiada na zapytania HTTP/REST po wdrożeniu na klastrze testowym). Dodatkowo, weryfikujemy wpływ szczegółowości instrukcji systemowych (prompt engineering) przy użyciu wariantów prompta różniących się poziomem szczegółowości wskazówek dotyczących najlepszych praktyk DevOps, co pozwoli ocenić wrażliwość podejścia agentowego na jakość prompt engineering.
+    Duże modele językowe, działające jako agenty z dostępem do narzędzi analizy repozytorium, są w stanie autonomicznie wygenerować funkcjonalne konfiguracje Docker i Kubernetes, które umożliwiają poprawne uruchomienie aplikacji bez dodatkowej ingerencji człowieka, w tym osiągnięcie gotowości usługowej widocznej na poziomie interfejsu (np. webowe API odpowiada na zapytania HTTP/REST po wdrożeniu na klastrze testowym). Dodatkowo, oceniany jest wpływ szczegółowości instrukcji systemowych (prompt engineering) przy użyciu wariantów prompta różniących się poziomem szczegółowości wskazówek dotyczących najlepszych praktyk DevOps, co pozwala ocenić wrażliwość podejścia agentowego na jakość prompt engineering.
 
     \item \textbf{H2: Ograniczenia złożonościowe} \\
     Istnieje próg złożoności aplikacji, powyżej którego jakość autonomicznie generowanych konfiguracji znacząco spada. Progi te można uchwycić, obserwując wyniki na kontrolowanych repozytoriach poc1–poc4 o rosnącej liczbie komponentów i zależności (od prostego monolitu po prosty układ mikroserwisowy); oczekuje się, że metryki sukcesu (np. odsetek poprawnych wdrożeń) maleją wraz z przechodzeniem od poc1 do poc4.
@@ -136,7 +136,7 @@ Wszystkie testowane modele otrzymują identyczny prompt oraz to samo repozytoriu
 
 \subsubsection{Hipoteza}
 
-Duże modele językowe, działające jako agenty z dostępem do narzędzi analizy repozytorium, są w stanie autonomicznie wygenerować funkcjonalne konfiguracje Docker i Kubernetes, które umożliwiają poprawne uruchomienie aplikacji bez dodatkowej ingerencji człowieka. Dodatkowo, weryfikujemy wpływ szczegółowości instrukcji systemowych (prompt engineering) na skuteczność generacji.
+Duże modele językowe, działające jako agenty z dostępem do narzędzi analizy repozytorium, są w stanie autonomicznie wygenerować funkcjonalne konfiguracje Docker i Kubernetes, które umożliwiają poprawne uruchomienie aplikacji bez dodatkowej ingerencji człowieka. Dodatkowo, oceniany jest wpływ szczegółowości instrukcji systemowych (prompt engineering) na skuteczność generacji.
 
 \subsubsection{Strategia testowania}
 
