--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -739,6 +739,22 @@
   urldate  = {2025-10-27}
 }
 
+@misc{grok41_fast,
+  title    = {Grok 4.1 Fast},
+  author   = {xAI},
+  url      = {https://x.ai/news/grok-4-1/},
+  language = {en},
+  urldate  = {2025-12-03}
+}
+
+@misc{gptoss_120b,
+  title    = {GPT-OSS 120B},
+  author   = {OpenAI},
+  url      = {https://openai.com/index/introducing-gpt-oss/},
+  language = {en},
+  urldate  = {2025-12-03}
+}
+
 @misc{mistral_medium,
   title    = {Mistral Medium},
   author   = {Mistral AI},
