--- a/docs/tex/3-przeglad-narzedzi.tex
+++ b/docs/tex/3-przeglad-narzedzi.tex
@@ -14,24 +14,11 @@ Modele komercyjne dostępne przez API zazwyczaj cechują się wysoką wydajnośc
 
 Wybrane do badania modele komercyjne to:
 
-TODO zaktualizować listę modeli jak już będzie finalna!
-
 \begin{itemize}
-    \item \textbf{OpenAI GPT-5} \cite{gpt5}: TODO
-
-    \item \textbf{OpenAI GPT-5 Mini} \cite{gpt5mini}: TODO
-
-    \item \textbf{OpenAI o3} \cite{o3}: TODO
-
-    \item \textbf{Anthropic Claude Sonnet 4.5} \cite{claude_sonnet45}: TODO
-
-    \item \textbf{Anthropic Claude Haiku 4.5} \cite{claude_haiku45}: TODO
-
-    \item \textbf{Anthropic Claude Opus 4.1} \cite{claude_opus41}: TODO
-
-    \item \textbf{Google Gemini 2.5 Pro} \cite{gemini25_pro}: TODO
-
-    \item \textbf{Google Gemini 2.5 Flash} \cite{gemini25_flash}: TODO
+    \item \textbf{OpenAI GPT-5 Mini} \cite{gpt5mini}
+    \item \textbf{Anthropic Claude Haiku 4.5} \cite{claude_haiku45}
+    \item \textbf{Google Gemini 2.5 Flash} \cite{gemini25_flash}
+    \item \textbf{xAI Grok 4.1 Fast} \cite{grok41_fast}
 \end{itemize}
 
 Modele open-source stanowią atrakcyjną alternatywę, oferując pełną kontrolę, możliwość uruchomienia na własnej infrastrukturze oraz brak dodatkowych opłat za każde zapytanie. Ich wydajność zależy przede wszystkim od dostępności zasobów sprzętowych, a aktywny rozwój społeczności przyczynia się do ciągłej optymalizacji i pojawiania się coraz bardziej zaawansowanych wersji.
@@ -39,19 +26,9 @@ Modele open-source stanowią atrakcyjną alternatywę, oferując pełną kontrol
 Wybrane do badania modele open-source to:
 
 \begin{itemize}
-    \item \textbf{Qwen 3} \cite{qwen3}: TODO
-
-    \item \textbf{DeepSeek R1} \cite{deepseek_r1}: TODO
-
-    \item \textbf{DeepSeek V3.2} \cite{deepseek_v32}: TODO
-
-    \item \textbf{GLM 4.6} \cite{glm46}: TODO
-
-    \item \textbf{Mistral Medium} \cite{mistral_medium}: TODO
-
-    \item \textbf{Meta Llama 4 Maverick} \cite{llama4_maverick}: TODO
-
-    \item \textbf{Meta Llama 4 Scout} \cite{llama4_scout}: TODO
+    \item \textbf{DeepSeek V3.2} \cite{deepseek_v32}
+    \item \textbf{GLM 4.6} \cite{glm46}
+    \item \textbf{GPT-OSS 120B} \cite{gptoss_120b}
 \end{itemize}
 
 Wszystkie wymienione modele reprezentują aktualny szczyt osiągnięć w dziedzinie dużych modeli językowych. Wybrane zostały przede wszystkim ze względu na ich potwierdzone zdolności do generowania wysokiej jakości kodu oraz wsparcie dla funkcji \textit{tool calling}. Funkcje te umożliwiają bezpośrednią integrację modeli z zewnętrznymi narzędziami lub usługami poprzez dedykowane mechanizmy API bądź platformy agentowe, takie jak LangChain \cite{langchain} czy LangGraph \cite{langgraph}. W proponowanym w tej pracy podejściu, funkcje \textit{tool calling} będą odgrywać znaczącą rolę w zarządzaniu kontekstem i procesie generowania konfiguracji.
