--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -747,10 +747,10 @@
   urldate  = {2025-12-03}
 }
 
-@misc{gptoss_120b,
-  title    = {GPT-OSS 120B},
-  author   = {OpenAI},
-  url      = {https://openai.com/index/introducing-gpt-oss/},
+@misc{qwen3_next_80b_a3b_thinking,
+  title    = {Qwen3 Next 80B A3B Thinking},
+  author   = {Qwen Team},
+  url      = {https://qwen.ai/blog?id=4074cca80393150c248e508aa62983f9cb7d27cd},
   language = {en},
   urldate  = {2025-12-03}
 }
