--- a/docs/tex/3-przeglad-narzedzi.tex
+++ b/docs/tex/3-przeglad-narzedzi.tex
@@ -28,7 +28,7 @@ Wybrane do badania modele open-source to:
 \begin{itemize}
     \item \textbf{DeepSeek V3.2} \cite{deepseek_v32}
     \item \textbf{GLM 4.6} \cite{glm46}
-    \item \textbf{GPT-OSS 120B} \cite{gptoss_120b}
+    \item \textbf{Qwen3 Next 80B A3B Thinking} \cite{qwen3_next_80b_a3b_thinking}
 \end{itemize}
 
 Wszystkie wymienione modele reprezentują aktualny szczyt osiągnięć w dziedzinie dużych modeli językowych. Wybrane zostały przede wszystkim ze względu na ich potwierdzone zdolności do generowania wysokiej jakości kodu oraz wsparcie dla funkcji \textit{tool calling}. Funkcje te umożliwiają bezpośrednią integrację modeli z zewnętrznymi narzędziami lub usługami poprzez dedykowane mechanizmy API bądź platformy agentowe, takie jak LangChain \cite{langchain} czy LangGraph \cite{langgraph}. W proponowanym w tej pracy podejściu, funkcje \textit{tool calling} będą odgrywać znaczącą rolę w zarządzaniu kontekstem i procesie generowania konfiguracji.
